crates/biome_html_parser/tests/html_specs/error/vue/v-for/invalid-tuples.vue
<div v-for="() in items">{{ item }}</div>
<div v-for="(item,) in items">{{ item }}</div>
<div v-for="(value, key, index, extra) in object">{{ value }}</div>
